# hermes-zulip

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  adapter.py  client.py  plugin.yaml  pyproject.toml  tools.py
.github/workflows/: tests.yml
.hermes/plans/: 2026-05-22_zulip-adapter.md
docs/: plan-interactive-widgets.md
scripts/: smoke_listen.py  smoke_send.py  smoke_tools.py  smoke_widgets.py
tests/: run_tests.py
