[project]
name = "hermes-zulip"
version = "0.1.0"
description = "Zulip gateway plugin for Hermes Agent — stream=project, topic=session."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
rootdir = "tests"
addopts = "--import-mode=importlib"
