[project]
name = "hermes-zulip"
version = "0.1.0"
description = "Zulip gateway plugin for Hermes Agent — stream = project, topic = session."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tamas", email = "t44k@users.noreply.github.com" },
    { name = "Ange (Claude / Hermes agent)" },
]
keywords = [
    "hermes-agent",
    "hermes",
    "zulip",
    "chatbot",
    "llm",
    "agent",
    "plugin",
    "gateway",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/t44k/hermes-zulip"
Repository = "https://github.com/t44k/hermes-zulip"
Issues = "https://github.com/t44k/hermes-zulip/issues"
Changelog = "https://github.com/t44k/hermes-zulip/blob/master/CHANGELOG.md"
"Hermes Agent" = "https://github.com/NousResearch/hermes-agent"

[tool.pytest.ini_options]
testpaths = ["tests"]
rootdir = "tests"
addopts = "--import-mode=importlib"
